# sklearn-jax-kernels

./: .gitignore  .travis.yml  README.md  pyproject.toml
ml_pipeline/: gpc.py
ml_pipeline/base/: kernel.py
ml_pipeline/kernels/: strings.py
scripts/: benchmark_RBF.py  benchmark_string_kernel.py
sklearn_jax_kernels/: __init__.py  base_kernels.py  config.py  gpc.py
sklearn_jax_kernels/structured/: string_utils.py  strings.py
tests/: test_base_kernels.py  test_gpc.py  test_kernels.py  test_ml_pipeline.py  test_structured_strings.py
